# price-action-analysis

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
data/index-analysis/: nifty_50.csv  nifty_sectoral_indices.csv
data/industry-specific-stocks/: Auto_Manufacturers.csv
data/sector-analysis/: Basic_Materials.parquet  Communication_Services.parquet  Consumer_Cyclical.parquet  Consumer_Defensive.parquet  Energy.parquet  Financial_Services.parquet  Healthcare.parquet  Industrials.parquet  Real_Estate.parquet  Technology.parquet  Utilities.parquet
data/us-indices/: ranked_djia.csv  ranked_nasdaq100.csv  ranked_sp500.csv
pages/: index_analysis.py  monthly_analysis.py  stock_heatmap.py
price_action_analysis/: constants.py  data_loader.py
src/: constants.py  loader.py  plots.py
src/price_action_analysis/: binary_classification.py  config.py  data_loader.py  index_analyzer.py  plots.py
