[project]
name = "price-action-analysis"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "kaleido>=1.0.0",
    "nbformat>=5.10.4",
    "pandas[excel]>=2.3.1",
    "plotly>=6.2.0",
    "scipy>=1.16.1",
    "streamlit[charts]>=1.48.0",
    "yfinance>=0.2.65",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
