[project]
name = "price-action-analysis"
version = "0.1.0"
requires-python = ">=3.12"
dependencies= [
    "httpx>=0.28.1",
    "pandas[excel,html]>=2.3.1",
    "plotly>=6.2.0",
    "scikit-learn>=1.7.2",
    "streamlit[charts]>=1.48.0",
    "yfinance>=0.2.65",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["price_action_analysis*"]
exclude = ["tests*", "sandbox*"]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "nbformat>=5.10.4",
]
